@@ -1,0 +1,24 @@
+gui/logcleaner
+==============
+
+.. dfhack-tool::
+    :summary: Configure logcleaner plugin settings.
+    :tags: fort auto units
+
+This is the configuration interface for the `logcleaner` plugin. You can enable
+or disable the plugin and toggle which report types are automatically cleared.
+
+Usage
+-----
+
+::
+
+    gui/logcleaner
+
+Hotkeys
+---------
+
+- Shift+E: Enable/disable the plugin
+- Shift+C: Toggle combat report clearing
+- Shift+S: Toggle sparring report clearing (default enabled)
+- Shift+H: Toggle hunting report clearing
