@@ -140,6 +140,11 @@ COMMANDS_BY_IDX = {
     {command='hide-tutorials', group='gameplay', mode='system_enable'},
     {command='immortal-cravings', group='gameplay', mode='enable'},
     {command='light-aquifers-only', group='gameplay', mode='run'},
+    {command='logcleaner', group='gameplay', mode='enable'},
+    {command='logcleaner all', group='gameplay', mode='run',
+        desc='Enable logcleaner with all filters (combat, sparring, hunting).'},
+    {command='logcleaner sparring', group='gameplay', mode='run',
+        desc='Enable logcleaner with sparring filter (default).'},
     {command='misery', group='gameplay', mode='enable'},
     {command='orders-reevaluate', help_command='orders', group='gameplay', mode='repeat',
         desc='Invalidates all work orders once a month, allowing conditions to be rechecked.',
